--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,37 @@
     <string name="trailers">Trailers</string>
     <string name="casts">Casts</string>
     <string name="similiar_movies">Similiar Movies</string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+
+    <!--- Navigation -->
+
+    <string name="movies">Movies</string>
+    <string name="favourites">Favourites</string>
+    <string name="settings">Settings</string>
+
+    <!--- Preferences -->
+
+    <string name="lang_title_preference">Language</string>
+    <string name="lang_key" translatable="false">language</string>
+    <string name="dialog_lang_title_preference">Select Language</string>
+
+    <string name="pref_lang_english_entry">English</string>
+    <string name="pref_lang_french_entry">French</string>
+    <string name="pref_lang_hindi_entry">Hindi</string>
+    <string name="pref_lang_tamil_entry">Tamil</string>
+    <string name="pref_lang_malayalam_entry">Malayalam</string>
+    <string name="pref_lang_telugu_entry">Telugu</string>
+
+    <string name="pref_lang_english_value">en</string>
+    <string name="pref_lang_french_value">fr</string>
+    <string name="pref_lang_hindi_value">hi</string>
+    <string name="pref_lang_tamil_value">ta</string>
+    <string name="pref_lang_malayalam_value">ma</string>
+    <string name="pref_lang_telugu_value">te</string>
 
 </resources>
