--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,11 +38,13 @@
     <!--- Preferences -->
 
     <string name="lang_title_preference">Language</string>
-    <string name="lang_key" translatable="false">language</string>
     <string name="dialog_lang_title_preference">Select Language</string>
+    <string name="lang_key" translatable="false">language</string>
+    <string name="pref_lang_default_value">@string/pref_lang_english_value</string>
 
     <string name="pref_lang_english_entry">English</string>
     <string name="pref_lang_french_entry">French</string>
+    <string name="pref_lang_russia_entry">Russian</string>
     <string name="pref_lang_hindi_entry">Hindi</string>
     <string name="pref_lang_tamil_entry">Tamil</string>
     <string name="pref_lang_malayalam_entry">Malayalam</string>
@@ -50,9 +52,10 @@
 
     <string name="pref_lang_english_value">en</string>
     <string name="pref_lang_french_value">fr</string>
+    <string name="pref_lang_russia_value">ru</string>
     <string name="pref_lang_hindi_value">hi</string>
     <string name="pref_lang_tamil_value">ta</string>
-    <string name="pref_lang_malayalam_value">ma</string>
+    <string name="pref_lang_malayalam_value">mal</string>
     <string name="pref_lang_telugu_value">te</string>
 
 </resources>
