--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,11 @@
     <string name="no_network">No internet connection</string>
 
     <!-- menus-->
-    <string name="action_sort">Sort</string>
+    <string name="action_sort">Sort By</string>
+    <string name="action_search">Search</string>
+    <string name="action_language">Movie Language</string>
+
+    <string name="press_again_to_exit">Press again to exit</string>
 
     <!-- network connection -->
 
@@ -34,6 +38,10 @@
     <string name="movies">Movies</string>
     <string name="favourites">Favourites</string>
     <string name="settings">Settings</string>
+
+    <string name="no_fav_movies">No favourite movies</string>
+    <string name="added_to_favorites">Added to favourites</string>
+    <string name="removed_from_favorites">Removed from favourites</string>
 
     <!--- Preferences -->
 
