--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,9 +45,9 @@
 
     <!--- Preferences -->
 
-    <string name="lang_title_preference">Language</string>
-    <string name="dialog_lang_title_preference">Select Language</string>
-    <string name="lang_key" translatable="false">language</string>
+    <string name="lang_title_preference">Movie Language</string>
+    <string name="dialog_lang_title_preference">Select Movie Original Language</string>
+    <string name="pref_lang_key" translatable="false">movie_language</string>
     <string name="pref_lang_default_value">@string/pref_lang_english_value</string>
 
     <string name="pref_lang_english_entry">English</string>
