--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="plot_synopsis">Plot Synopsis</string>
     <string name="trailers">Trailers</string>
     <string name="casts">Casts</string>
-    <string name="similiar_movies">Similiar Movies</string>
+    <string name="similiar_movies">Similar Movies</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -44,6 +44,8 @@
     <string name="no_fav_movies">No favourite movies</string>
     <string name="added_to_favorites">Added to favourites</string>
     <string name="removed_from_favorites">Removed from favourites</string>
+
+    <string name="no_internet_connection">No internet connection</string>
 
     <!--- Preferences -->
 
@@ -68,7 +70,7 @@
     <string name="pref_lang_malayalam_value">mal</string>
     <string name="pref_lang_telugu_value">te</string>
 
-    <string name="night_mode_preference">Night Mode</string>
+   <!-- <string name="night_mode_preference">Night Mode</string>
     <string name="pref_auto_night_mode_title">Automatic Night Mode</string>
     <string name="pref_auto_night_mode_default">false</string>
     <string name="pref_auto_night_mode_key">auto Night Mode</string>
@@ -78,6 +80,6 @@
     <string name="pref_night_mode_default">false</string>
     <string name="pref_night_mode_key">auto Night Mode</string>
     <string name="pref_night_mode_summary_on">Switch off to enable Night Mode</string>
-    <string name="pref_night_mode_summary_off">Switch on to enable Night Mode</string>
+    <string name="pref_night_mode_summary_off">Switch on to enable Night Mode</string>-->
 
 </resources>
